Correcciones pre entrega 3

--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -70,7 +70,7 @@ header {
 main {
   width: auto;
   background-color: black;
-  background-image: url(img/marble-2371776_1920.jpg);
+  background-image: url(../img/marble-2371776_1920.jpg);
   background-size: cover;
   background-position: center;
   min-height: 100vh;
@@ -104,13 +104,14 @@ main {
 }
 
 .proft {
-  float: right;
   margin-top: 40px;
-  width: 0%;
+  width: 100%;
   float: none;
   height: auto;
   padding-top: 15px;
   padding-bottom: 25px;
+  padding-left: 50px;
+  padding-right: 50px;
 }
 
 h1, h2 {
@@ -213,6 +214,10 @@ textarea {
 
 /*# sourceMappingURL=estilos.css.map */
 
+h1{
+  padding-top: 30px;
+}
+
 form{
   padding: 0px 20px;
 }
@@ -221,6 +226,7 @@ form{
   flex-direction: row;
   justify-content: space-evenly;
   padding-bottom: 20px;
+  padding-top: 50px;
 }
 
 .map iframe{
@@ -235,11 +241,16 @@ padding: 20px;
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  padding-left: 70px;
+  padding-top: 50px;
 }
+
 
 .contMap h3{
   padding-bottom: 20px;
 }
+
+
 @media (max-width: 768px) {
   html{
       min-height: 100%;
